# macbridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ios-build.yml
examples/hello-macbridge/: Package.swift  generate_xcodeproj.py
examples/hello-macbridge/Sources/: main.swift
macbridge/: __init__.py  __main__.py  build.py  cli.py  config.py  server.py  sync.py
macbridge/backends/: __init__.py  base.py  mock.py  ssh.py
ui/: index.html  prototype.html
vscode/: .vscodeignore  README.md  extension.js  macbridge-0.1.0.vsix  macbridge-vscode-2.0.0.vsix  macbridge-vscode-2.0.1.vsix  macbridge-vscode-2.0.2.vsix  package.json
